Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h2>
 <a id="example" class="anchor" href="#example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Example</h2>
 
-<p><a href="http://plnkr.co/edit/5voXlc1OGavQdW4xVyjO?p=preview">Plunker</a></p>
+<p><a href="http://plnkr.co/edit/9iipXjAyFAS6SCrYTv0c">Plunker</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/TheBoef/ngResizer">Ngresizer</a> is maintained by <a href="https://github.com/TheBoef">TheBoef</a>.</span>
